--- a/example.env
+++ b/example.env
@@ -4,3 +4,11 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=db
 DB_ECHO=false
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+
+SESSION_EXPIRE_TIME_SECONDS=3600# 1 hour
+SESSION_EXPIRE_TIME_SECONDS_TRUST_DEVICE=2592000# 30 days
